--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -55,6 +55,7 @@ jobs:
       run: npx pagefind --site "public"
     - name: Upload artifact
       uses: actions/upload-pages-artifact@v2
+      uses: actions/upload-artifact@v4
       with:
         path: ./public
 
